# iSqrt

./: .gitignore  Makefile.am  README.md  TODO  a.out  autogen.sh  confdefs.h  configure.ac
confXCrYNM/: defines.awk  subs1.awk
src/: Makefile-LIBADD.inc  Makefile.am  isqrt-test.c  isqrt-test.pc.in  isqrt.h  isqrt_test_config  libisqrt.c  libisqrt.pc.in
